# platinum-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260610_0001_initial_baseline.py  20260610_0002_add_games_and_guides.py  20260610_0003_add_guide_content.py
apps/api/src/platinum_tracker_api/: __init__.py  config.py  db.py  fixtures.py  main.py  models.py  routes.py  schemas.py  server.py
apps/api/src/platinum_tracker_api/fixture_data/: initial.json
apps/api/tests/: conftest.py  test_config.py  test_crud.py  test_db.py  test_fixtures.py  test_health.py  test_migrations.py  test_server.py
apps/web/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.css  App.test.tsx  App.tsx  api.ts  crud-pages.test.tsx  crud-pages.tsx  guide-content-page.test.tsx  guide-content-page.tsx  pages.tsx
apps/web/src/components/: app-shell.tsx  crud-form.tsx  primary-navigation.tsx
apps/web/tests/e2e/: app.spec.ts
docs/: DATA_MODEL.md  IMPLEMENTATION_PLAN.md  IMPORT_SPEC.md  PRODUCT_SPEC.md  TECHNICAL_SPEC.md  UX_SPEC.md
scripts/: ci.sh
