[project]
name = "platinum-tracker-api"
version = "0.1.0"
description = "Local API for Platinum Tracker"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.15.0,<2.0.0",
    "fastapi[standard]>=0.115.0,<1.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
]

[project.scripts]
platinum-tracker-api = "platinum_tracker_api.server:main"
platinum-tracker-load-fixtures = "platinum_tracker_api.fixtures:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platinum_tracker_api"]

[tool.hatch.build]
include = [
    "src/platinum_tracker_api/**/*.json",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["platinum_tracker_api"]
mypy_path = "src"
